--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body{
-	background-color: rgb(31, 24, 237);
+	background-image: url("earth back.jpg");
+	background-position: center;
+	background-size: cover;
 }
 
 #login_div{
@@ -27,7 +29,7 @@ html, body
 
 .header
 {
-	color: rgb(15, 12, 12);font-family: 'Yeon Sung';font-size: 45px;letter-spacing: 10px;margin-top: 80px;
+	color: rgb(252, 236, 236);font-family: 'Yeon Sung';font-size: 45px;letter-spacing: 10px;margin-top: 80px;
 }
 .header img
 {
@@ -106,5 +108,5 @@ html, body
 }
 .message_h4
 {
-	padding-left:5px;color:grey;
+	padding-left:5px;color:rgb(240, 237, 237);
 }
